--- a/index1.html
+++ b/index1.html
@@ -7,31 +7,87 @@
     <title>Meu primeiro site</title>
 </head>
 <body>
-    <header>
-        <ul class="menu">
-            <li><a href="#primeiroPonto">Projeto</a></li>
-            <li><a href="segundoPonto">Educação</a></li>
-            <li><a href="terceitoPonto">Escolas</a></li>
-            <li><a href="quartoPonto">Sobre</a></li>
-        </ul>
-    </header>
-    <figure id ="capa" class="meio">
-        <div class="imagem_background">
-            
-            <img src="pexels-pixabay-289737.jpg" alt="estudo" width="100%" height="100%">
-            <h2 class ="titulo">Educação, benefícios, adversidades, portas diferentes oportunidades diversas. </h2>
-            <!-- <a class="começo" href="primeiroPonto">Iniciar</a> -->
+    <header id="cabeçalho">
+        <div id="sombra">
+            <a href="#titulo"><img id="logo" src="imagens/Parkemew_Library__3_-removebg-preview.png" alt="logo"></a>
+            <ul id="menu">
+                <li class="texto"><a  id ="clicar1" href="#projeto">Projeto</li></a>
+                <li class="texto"><a  id ="clicar1" href="#Analise">Analise</li></a>
+                <li class="texto"><a id ="clicar1" href="#escolas">Centros</li></a>
+                <li class="texto"><a id ="clicar1" href="#perfil">Sobre</li></a>
+            </ul>
         </div>
-    </figure>
-    <section id="primeiroPonto" class="corFundo">
-       <div class="segundaMetade">
-        <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/KcBTnj8q7bk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-       </div> 
-       <div class="segundaMetade">
-            <h1 class="meio">Projeto</h1>
-            <hr>
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-       </div>
+    </header>
+    <div id="imagem-Fundo">
+        <h1 id="titulo">Educantia</h1>
+        <hr>
+        <h2 id="subtitulo">Educação, benefícios, adversidades, portas diferentes oportunidades diversas.</h2>
+        <a id="clicar" href="#projeto">Começar</a>
+    </div>
+    <section id ="projeto" class="section_tipo">
+        <div class="coluna dois">
+            <iframe id ="video" width="100%" height="315" src="https://www.youtube.com/embed/KcBTnj8q7bk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="coluna dois">
+            <h3 id="tamanho" class="texto_analise">Projeto</h3>
+            <hr class="divisão">
+            <p class="conteudo">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+            <p class="conteudo">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+            <p class="conteudo" id="margem_baixo">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        </div>
+    </section>
+    <section id = "Analise">
+        
+        <h3 class="texto_analise">Analise</h3>
+        <hr class="divisão">
+        <div class="coluna quatro">
+            <img src="imagens/escola.png" alt="Escolas" class="imagem">
+            <h3 class="texto_analise1">Escolas</h3>
+            <p class="texto">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        </div>
+        <div class="coluna quatro">
+            <img src="imagens/aluna.png" alt="Alunos" class="imagem">
+            <h3 class="texto_analise1">Alunos</h3>
+            <p class="texto">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        </div>
+        <div class="coluna quatro">
+            <img src="imagens/dinheiro.png" alt="Dinheiro" class="imagem">
+            <h3 class="texto_analise1">Dinheiro</h3>
+            <p class="texto">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        </div>
+        <div class="coluna quatro">
+            <img src="imagens/lista.png" alt="Resultados" class="imagem">
+            <h3 class="texto_analise1">Resultados</h3>
+            <p class="texto">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        </div>
+    </section>
+    <section id="escolas">
+        <h3 class="texto_analise">Centros Educacionais</h3>
+        <hr class="divisão">
+        <p class="texto">Alguns tipos de Escolas espalhados pelo Brasil, perceba a grande diferença entre elas, mesmo todas sendo sustentadas pelo Estado.</p>
+        <div class="coluna dois">
+            <img src="imagens/Escola precaria.jpg" class="imagem_escola" alt="Escola Precaria sem investimento">
+            <p class="texto_escola">A Escola Municipal Raimundo Paixão</p>
+        </div>
+        <div class="coluna dois">
+            <img src ="imagens/IMG_0964.jpg" class="imagem_escola um" alt="Escola Rica com investimento">
+            <p class="texto_escola">EMEC - Escola Municipal de Educação Complementar</p>
+        </div>
+    </section>
+    <section id="perfil">
+        <div class="coluna dois sobremim">
+            <h3 class="texto_analise">Sobre mim</h3>
+            <p class="texto">Olavo Conceição</p>
+            <p class="texto">Aenean porta, justo non aliquet interdum, risus nibh fringilla orci, nec lacinia justo sem a lorem. Pellentesque sagittis finibus risus, vitae viverra metus commodo quis. In sed elit cursus, tincidunt lectus vel, mattis dolor. Donec vel libero lobortis, cursus turpis a, scelerisque lorem.</p>
+            <p class="texto">Aenean porta, justo non aliquet interdum, risus nibh fringilla orci, nec lacinia justo sem a lorem. Pellentesque sagittis finibus risus, vitae viverra metus commodo quis. In sed elit cursus, tincidunt lectus vel, mattis dolor. Donec vel libero lobortis, cursus turpis a, scelerisque lorem.</p>
+            <p class="texto">Aenean porta, justo non aliquet interdum, risus nibh fringilla orci, nec lacinia justo sem a lorem. Pellentesque sagittis finibus risus, vitae viverra metus commodo quis. In sed elit cursus, tincidunt lectus vel, mattis dolor. Donec vel libero lobortis, cursus turpis a, scelerisque lorem.</p>
+        </div>
+        <div class="coluna dois">
+            <img src="imagens/WhatsApp Image 2020-03-02 at 20.52.32.jpeg" alt="Autor do site" id="eu">
+        </div>
     </section>
 </body>
 </html>
+
+<div>Ícones feitos por <a href="https://www.flaticon.com/br/autores/geotatah" title="geotatah">geotatah</a> from <a href="https://www.flaticon.com/br/" title="Flaticon">www.flaticon.com</a></div>
+rgb(52, 52, 54)
